@@ -27,7 +27,7 @@ class Jawbone_object : public Container_game_object {
  public:
 	Jawbone_object(int shapenum, int framenum, unsigned int tilex, 
 				unsigned int tiley, unsigned int lft,
-				unsigned char res = 0)
+				char res = 0)
 		: Container_game_object(shapenum, framenum, tilex, tiley, lift, res)
 		{ }
 	Jawbone_object() : Container_game_object() {  }
